start page done & fix css on mobile & add animation on mobile

--- a/개발과정/Front/src/App.css
+++ b/개발과정/Front/src/App.css
@@ -11,7 +11,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-      animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 20s linear;
   }
 }
 
@@ -32,10 +32,11 @@
 
 @keyframes App-logo-spin {
   from {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
+
   to {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
@@ -66,22 +67,51 @@
   flex-direction: column;
 }
 
-.mobile-box{
+.mobile-box {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%
 }
 
-.mobile-header{
+.mobile-header {
   flex: 1;
   width: 100%;
 }
 
-.mobile-body{
+.mobile-body {
   flex: 8;
   width: 100%;
 }
+
+.login-box {
+  position: fixed;
+  width: 60%;
+  justify-content: center;
+  vertical-align: middle;
+  top: 20%;
+  left: 20%;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@900&display=swap");
+
+.login-header {
+  width: 100%;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-header img {
+  width: 25%;
+}
+
+.login-header h2 {
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: large;
+  text-align: center;
+}
+
 
 body {
   overflow: hidden;
