--- a/개발과정/Front/src/component/Mobile_Main.css
+++ b/개발과정/Front/src/component/Mobile_Main.css
@@ -2,20 +2,25 @@
 
 .mobile-main-container {
     width: 100%;
+    height: 80%;
     flex: 8.5;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
-    overflow:hidden;
-    margin-top:3%;
+    overflow: hidden;
+    margin-top: 3%;
     font-family: "Noto Sans KR", sans-serif;
 }
 
 .mobile-output {
     width: 80%;
-    height: 60%;
+    height: 50%;
     flex: 9;
+    border-radius: 20px;
+    border-width: 1px;
+    border-color: #000000;
+    border-style: solid;
     overflow: scroll;
 }
 
@@ -28,20 +33,64 @@
 }
 
 .mobile-input-field {
-  width: 80%;
-  border-radius: 20px;
-  border-width: 1px;
-  border-color: #000000;
-  border-style: solid;
-  padding-left: 20px;
-  padding-right: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
+    width: 80%;
+    border-radius: 20px;
+    border-width: 1px;
+    border-color: #000000;
+    border-style: solid;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
 
 .mobile-input-button {
     position: absolute;
-    right: 10%;
+    right: 15%;
+}
+
+.mobile-answer {
+    margin-top: 2%;
+    margin-left: 4%;
+}
+
+.mobile-question {
+    margin-top: 2%;
+    margin-left: 4%;
+}
+
+.mobile-animation {
+    overflow: hidden;
+    white-space: nowrap;
+    margin: 0px 10px 10px 10px;
+    width: 0;
+    animation: typing 7s steps(50) forwards;
+}
+
+@keyframes typing {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
+@keyframes blink-effect {
+
+    0%,
+    100% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+}
+
+.blink {
+    animation: blink-effect 1.2s linear infinite;
 }
